Typography restructure additions

--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -11,12 +11,12 @@ Typography is the art and technique of arranging type (letters and characters). 
 
 The 3 typefaces used in the design system are Roboto, Merriweather & Montserrat.
 
-<table className="uqds-table uqds-table--card">
+<table>
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Category</th>
-      <th className="uqds-table__heading">Font name</th>
-      <th className="uqds-table__heading">Usage</th>
+      <th className="uqds-table__heading text--left">Category</th>
+      <th className="uqds-table__heading text--left">Font name</th>
+      <th className="uqds-table__heading text--left">Usage</th>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Category:">Primary</td>
@@ -83,30 +83,62 @@ Copy the HTML or CSS lines below and paste it into your project to load design s
 
 ## Font size
 
-<table className="uqds-table uqds-table--card">
+<table>
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">rem</th>
-      <th className="uqds-table__heading">px</th>
-      <th className="uqds-table__heading">Usage</th>
+      <th className="uqds-table__heading text--right">Rem</th>
+      <th className="uqds-table__heading text--right">Px</th>
+      <th className="uqds-table__heading text--left">Class name</th>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="rem:">0.75</td>
-      <td className="uqds-table__item" data-title="px:">12</td>
-      <td className="uqds-table__item" data-title="Usage:">Body xsmall</td>
+      <td className="text--right" data-title="rem:">0.75</td>
+      <td className="text--right" data-title="px:">12</td>
+      <td className="uqds-table__item" data-title="Usage:">.text--xs</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="rem:">0.875</td>
-      <td className="uqds-table__item" data-title="px:">14</td>
-      <td className="uqds-table__item" data-title="Usage:">Body small</td>
+      <td className="text--right" data-title="rem:">0.875</td>
+      <td className="text--right" data-title="px:">14</td>
+      <td className="uqds-table__item" data-title="Usage:">.text--s</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="rem:">1</td>
-      <td className="uqds-table__item" data-title="px:">16</td>
-      <td className="uqds-table__item" data-title="Usage:">Body</td>
+      <td className="text--right" data-title="rem:">1</td>
+      <td className="text--right" data-title="px:">16</td>
+      <td className="" data-title="Usage:">.text--m</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="text--right" data-title="rem:">1.125</td>
+      <td className="text--right" data-title="px:">18</td>
+      <td className="uqds-table__item" data-title="Usage:">.text--l</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="text--right" data-title="rem:">1.25</td>
+      <td className="text--right" data-title="px:">20</td>
+      <td className="" data-title="Usage:">.text--xl</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="text--right" data-title="rem:">1.5</td>
+      <td className="text--right" data-title="px:">24</td>
+      <td className="" data-title="Usage:">.text--xxl</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="text--right" data-title="rem:">2</td>
+      <td className="text--right" data-title="px:">32</td>
+      <td className="" data-title="Usage:">.text--xxxl</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="text--right" data-title="rem:">2.5</td>
+      <td className="text--right" data-title="px:">40</td>
+      <td className="" data-title="Usage:">.text--xxxxl</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="text--right" data-title="rem:">3</td>
+      <td className="text--right" data-title="px:">48</td>
+      <td className="" data-title="Usage:">.text--xxxxxl</td>
     </tr>
   </tbody>
 </table>
+
+## Font weight
 
 ## Title wrap
 
