Body component review changes

--- a/packages/storybook-html/src/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-elements.docs.mdx
@@ -4,6 +4,16 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # Body elements
 <StatusBadge.Development />
 
+## Title
+<Canvas withSource="none">
+  <Story id="components-body-elements--title" />
+</Canvas>
+
+## Header
+<Canvas withSource="none">
+  <Story id="components-body-elements--header" />
+</Canvas>
+
 ## Text block
 <Canvas withSource="none">
   <Story id="components-body-elements--text-block" />
