--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -22,7 +22,24 @@ export const FontList = () => `
 
 <Story name="Font list">{FontList.bind({})}</Story>
 
-<br /><br />
+<br />
+
+## Font stack
+
+Roboto
+```scss
+font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+```
+Merriweather
+```scss
+font-family: Merriweather, Georgia, serif;
+```
+Montserrat
+```scss
+font-family: Montserrat, Helvetica, Arial, sans-serif;
+```
+
+<br />
 
 ## Loading fonts
 
@@ -42,54 +59,68 @@ Copy the HTML or CSS lines below and paste it into your project to load design s
 @import url('https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css');
 ```
 
+<br />
+
 ## Font size
 
 <table>
   <thead>
     <tr>
-      <th>rem</th>
-      <th>px</th>
+      <th>Rem</th>
+      <th>Px</th>
+      <th>SASS Variable</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>0.75</td>
       <td>12</td>
+      <td>$font-size-xs</td>
     </tr>
     <tr>
       <td>0.875</td>
       <td>14</td>
+      <td>$font-size-s</td>
     </tr>
     <tr>
       <td>1</td>
       <td>16</td>
+      <td>$font-size-m</td>
     </tr>
     <tr>
       <td>1.125</td>
       <td>18</td>
+      <td>$font-size-l</td>
     </tr>
     <tr>
       <td>1.25</td>
       <td>20</td>
+      <td>$font-size-xl</td>
     </tr>
     <tr>
       <td>1.5</td>
       <td>24</td>
+      <td>$font-size-xxl</td>
     </tr>
     <tr>
       <td>2</td>
       <td>32</td>
+      <td>$font-size-xxxl</td>
     </tr>
     <tr>
       <td>2.5</td>
       <td>40</td>
+      <td>$font-size-xxxxl</td>
     </tr>
     <tr>
       <td>3</td>
       <td>48</td>
+      <td>$font-size-xxxxxl</td>
     </tr>
   </tbody>
 </table>
+
+<br />
 
 ## Font style
 
@@ -122,7 +153,7 @@ export const FontItalic = () => `
 
 <Story name="Font italic">{FontItalic.bind({})}</Story>
 
-<br /><br />
+<br />
 
 ## Base typography palette
 
@@ -220,5 +251,7 @@ export const FontItalic = () => `
     </tr>
   </tbody>
 </table>
+
+<br />
 
 ## Accessibility
