palette heading change

--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -155,7 +155,7 @@ export const FontItalic = () => `
 
 <br />
 
-## Base typography palette
+## Base palette
 
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
