--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -95,7 +95,7 @@ Scale background images on the section to always cover `section--background-imag
 </Canvas>
 
 ```html
-<div class="sectionn section--image-behind">
+<div class="section section--image-behind">
   <div class="section__background"><img src="http://lorempixel.com/1920/1080" /></div>
   </div>
 </div>
