Fixed Sentence cased Menu & General words

--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -10,9 +10,9 @@ Breadcrumbs are horizontally arranged text links separated by an arrow icon (arr
 
 The arrow icon indicates the level of that page relative to the page links beside it. It is displayed via background-image data URIs in CSS.
 
-## Breadcrumb Levels
+## Breadcrumb levels
 
-### One Level
+### One level
 
 This would be one level deeper than the home page.
 
@@ -20,7 +20,7 @@ This would be one level deeper than the home page.
   <Story id="components-breadcrumb--breadcrumb-one-level" />
 </Canvas>
 
-### Multi Level
+### Multi level
 
 In a multi level breadcrumb, there will be more than one text link.
 
@@ -30,7 +30,7 @@ In a multi level breadcrumb, there will be more than one text link.
 
 
 
-## Breadcrumb Structures
+## Breadcrumb structures
 
 ### Basic structure
 
