--- a/packages/storybook-html/src/components/core/space.story.mdx
+++ b/packages/storybook-html/src/components/core/space.story.mdx
@@ -308,6 +308,7 @@ Stacks content vertically, applying top margin.
   </table>
 
 ### Inline spacing
+
 Arrange objects inline horizontally, applying right margin. 
 
 - wrapping as they flow like text from the left or right.
@@ -373,7 +374,7 @@ Arrange objects inline horizontally, applying right margin.
   </table>
 
 
-## Chart of Spacing scale
+## Chart of spacing scale
 
 This chart provides a guide to multiples of 8.  
 
