--- a/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
@@ -12,7 +12,7 @@ By default it is displayed as a 3 column layout and changes on different respons
 There are broadly 2 categories of Grid menus. 
 One where the height of the list elements is by default set to 'auto' and the other where all the list element heights are equalised via JS.
 
-### a) Grid menu - Height auto 
+### a) Grid menu - height auto 
 
 <Story id="components-grid-menu--grid-menu-all" />
 
@@ -157,13 +157,13 @@ One where the height of the list elements is by default set to 'auto' and the ot
 ```
 
 
-### b) Grid menu - Height equalised
+### b) Grid menu - height equalised
 In this category of the grid menu component, if the height of an item is bigger the alignment of the items are taken care of via JS.
 
 <Story id="components-grid-menu--equalised" />
 
 ```html
-<h3>Grid menu - Equalised</h3>
+<h3>Grid menu - equalised</h3>
 <ul class="uq-grid-menu">
   <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
   <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
