--- a/packages/storybook-html/src/components/pagination/pagination.story.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.story.mdx
@@ -8,24 +8,24 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 Pagination, also known as paging, is the process of dividing a document into discrete pages, either electronic pages or printed pages.
 
-## Pagination States
+## Pagination states
 
 The Pagination component used here has various states and has display variants based on which page it displays. For instance, if the component is displaying the first page of a series of pages, the links 'first' and 'prev' are removed. 
 If the component is displaying the last page, the links 'last' and 'next' are removed. See the instances below and its html code.
 
-### Pagination First
+### Pagination first
 
 <Canvas withSource="none">
   <Story id="components-pagination--pagination-first" />
 </Canvas>
 
-### Pagination Middle
+### Pagination middle
 
 <Canvas withSource="none">
   <Story id="components-pagination--pagination-middle" />
 </Canvas>
 
-### Pagination Last
+### Pagination last
 
 <Canvas withSource="none">
   <Story id="components-pagination--pagination-last" />
