--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -101,7 +101,7 @@ Scale background images on the section to always cover `section--background-imag
 </div>
 ```
 
-### Light tint and Dark text
+### Light tint and dark text
 
 **Light tint** - Applies a light tint overlay to the section. As with the dark tint, this works in the opposite way, lightening the background image for better contrast with dark text on top.
 
