--- a/packages/storybook-html/src/components/site-header/site-header.docs.mdx
+++ b/packages/storybook-html/src/components/site-header/site-header.docs.mdx
@@ -8,7 +8,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 The main navigation component is designed to work closely with the header, site title component and collapses down to a conventional open/close menu button on smaller devices. 
 
-## Basic Example
+## Basic example
 
 A simple one level menu list
 
@@ -16,7 +16,7 @@ A simple one level menu list
   <Story height="350px" id="components-site-header--site-header" />
 </Canvas>
 
-## with Dropdown
+## with dropdown
 
 ### Site title
 
