Minor content fixes

--- a/packages/storybook-html/src/components/core/browser-support.story.mdx
+++ b/packages/storybook-html/src/components/core/browser-support.story.mdx
@@ -17,7 +17,7 @@ The following support levels outline a general approach to browser support. The 
 
 ### Full support
 
-Typically expected to covers only the **latest version** of browsers. Users of these browsers should receive a similarly, consistent and high user experience in all technology layers: 
+Typically expected to cover only the **latest version** of browsers. Users of these browsers should receive a similarly, consistent and high user experience in all technology layers: 
 
 We define technology layers as: 
 
@@ -78,10 +78,10 @@ If a  solution requires significant backward compatibility, there should be disc
 
 Where graceful degradation does not provide an acceptable solution it may be possible to use modern techniques:
 
-* graceful degradation
 * CSS preprocessors
 * polyfills
 * alerts/upgrade messages or modals
+* Alternative ways to consume the information
 
 ### Audience
 
@@ -113,7 +113,7 @@ For many aspects of browser testing, it is not possible to do an automated check
 
 Tools for browser testing have the ability to setup tests which can be run with little, or no, deliberate human intervention.
 
-In most cases the time, resources and device cost to test across multiple combinations of browsers , hardware and operating systems is impractical. Automated tools can be used to practically test more variations. 
+In most cases the time, resources and device cost to test across multiple combinations of browsers, hardware and operating systems is impractical. Automated tools can be used to practically test more variations. 
 
 What you'll need to check depends on your site and content.
 
@@ -188,7 +188,7 @@ All listed browsers should be tested on at least one operating system or emulati
     </tbody>
 </table>
 
-Versions of operating systems can also introduce variations in the rendering of code. If resources permit extend testing to combinations of operating system and browsers. 
+Versions of operating systems can also introduce variations in the rendering of code. If resources permit, extend testing to combinations of operating system and browsers. 
 
 <table>
     <caption>Browser & OS Version</caption>
@@ -324,7 +324,6 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
 
 
 ### Additional notes
-
 
 Microsoft will end technical support and security updates for older versions of Internet Explorer
 http://www.news.com.au/technology/online/security/microsoft-will-end-technical-support-and-security-updates-for-older-versions-of-internet-explorer/news-story/52896819a4236fa5f8b00de0f508527d
