--- a/packages/storybook-html/src/components/core/browser-support.story.mdx
+++ b/packages/storybook-html/src/components/core/browser-support.story.mdx
@@ -11,7 +11,7 @@ The goal of the browser support plan is to ensure the accessibility of content, 
 * Outline a framework for managing lists of supported browsers; 
 * Provide best-practice development advice and testing protocols to help ensure websites and web applications can support listed browsers.
 
-## Browser Support
+## Support levels
 
 The following support levels outline a general approach to browser support. The core aim is to maintain the integrity of content while gracefully degrading non essential aspects “bells and whistles”. 
 
