--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -157,8 +157,8 @@ export const FontItalic = () => `
 
 ## Base palette
 
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
+<table className="uqds-table uqds-table--card">
+  <thead>
     <tr className="uqds-table__mobile-heading">
       <th className="uqds-table__heading">Element</th>
       <th className="uqds-table__heading">Font</th>
@@ -168,6 +168,8 @@ export const FontItalic = () => `
       <th className="uqds-table__heading">Line-height</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
+  </thead>
+  <tbody>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">h1</td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
