--- a/packages/storybook-html/src/components/core/date.story.mdx
+++ b/packages/storybook-html/src/components/core/date.story.mdx
@@ -6,7 +6,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 ## Overview
 
-Display data such as date & time in a consistent and user-friendly way. Present the information concisely and avoid unnecessary redundancy.
+Display data such as date & time in a consistent and user-friendly way. Present the information concisely and avoid redundancy.
 
 These date formats are designed for
 
@@ -204,7 +204,7 @@ Depending on the context, show either date or time, or both date and time.
           <td><code>hh:mm:ss</code></td>
           <td>
           Use HH:MM:SS to show the duration of a recording, like audio or video. If hours or seconds don’t apply, then omit them.
-          There is no need to specify hour, minute, second units (ie. 1hr 1min 5 sec)
+          There is no need to specify hour, minute, second units (ie. 1hr 1min 5sec)
           </td>
         </tr>
     </tbody>
