storybook-html: typo in Grid docs

--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -246,7 +246,7 @@ to contain the contents in a grid container fashion.
 <!-- ... -->
 
 <div class="my-custom-container">
-  Hello word!
+  Hello world!
 </div>
 
 <!-- ... -->
