base typography table tweeks

--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -155,7 +155,7 @@ export const FontItalic = () => `
 
 <br />
 
-## Base palette
+## Base typography palette
 
 <table className="uqds-table uqds-table--card">
   <thead>
@@ -164,92 +164,92 @@ export const FontItalic = () => `
       <th className="uqds-table__heading">Font</th>
       <th className="uqds-table__heading">Size</th>
       <th className="uqds-table__heading">Weight</th>
-      <th className="uqds-table__heading">Colour, Variable, HEX</th>
+      <th className="uqds-table__heading">Colour (SASS Variable)</th>
       <th className="uqds-table__heading">Line-height</th>
-      <th className="uqds-table__heading">Usage</th>
+      <th className="uqds-table__heading">Usage example</th>
     </tr>
   </thead>
   <tbody>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">h1</td>
+      <td className="uqds-table__item">H1</td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
       <td className="uqds-table__item" data-title="Size:">XL - 2.5rem, <br /> MD - 1.875rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">UQ Purple, <code>$uq-purple</code>, #51247a</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage:">Page title</td>
+      <td className="uqds-table__item" data-title="Usage example:">Page Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">h2</td>
+      <td className="uqds-table__item">H2</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 2rem, <br /> MD - 1.5rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">UQ Purple, <code>$uq-purple</code>, #51247a</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage:">Header</td>
+      <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">h3</td>
+      <td className="uqds-table__item">H3</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.5rem, <br /> MD - 1.375rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">UQ Purple, <code>$uq-purple</code>, #51247a</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage:">Header</td>
+      <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">h4</td>
+      <td className="uqds-table__item">H4</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.25rem, <br /> MD - 1.25rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">UQ Purple, <code>$uq-purple</code>, #51247a</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage:">Header</td>
+      <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">h5</td>
+      <td className="uqds-table__item">H5</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.125rem, <br /> MD - 1.125rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">UQ Purple, <code>$uq-purple</code>, #51247a</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage:">Header</td>
+      <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">h6</td>
+      <td className="uqds-table__item">H6</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">UQ Purple, <code>$uq-purple</code>, #51247a</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage:">Header</td>
+      <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">p, span</td>
+      <td className="uqds-table__item">Text</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage:">Text</td>
+      <td className="uqds-table__item" data-title="Usage example:">Text</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">strong</td>
+      <td className="uqds-table__item">Bold</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage:">Text bold</td>
+      <td className="uqds-table__item" data-title="Usage example:">Text bold</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">emphasis</td>
+      <td className="uqds-table__item">Emphasis, Accent</td>
       <td className="uqds-table__item" data-title="Font:">Merriweather</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
-      <td className="uqds-table__item" data-title="Colour, Variable, HEX:">Default text, <code>$text--accent</code></td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text--accent</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage:">Text emphasis, Blockquote, Statement</td>
+      <td className="uqds-table__item" data-title="Usage example:">Emphasis, Blockquote, Statement</td>
     </tr>
   </tbody>
 </table>
