--- a/packages/storybook-html/src/components/form/form-controls.docs.mdx
+++ b/packages/storybook-html/src/components/form/form-controls.docs.mdx
@@ -82,7 +82,7 @@ answers, consider using a *text area*.
 <form>
   <label for="firstname" class="label--error" >First name</label>
   <input type="text" id="firstname" name="firstname" aria-describedby="firstnameFeedback" aria-invalid="true" class="input--error" />
-  <span id="firstnameFeedback" aria-live="polite" class="inline-error-message">Enter your first name</span>
+  <span id="firstnameFeedback" aria-live="polite" class="error-message">Enter your first name</span>
 </form>
 ```
 
@@ -98,7 +98,7 @@ formatting or unique value requirements.
 <form>
   <label for="username" class="label--success">Username</label>
   <input type="text" id="username" name="username" aria-describedby="usernameFeedback" class="input--success" />
-  <span id="usernameFeedback" aria-live="polite" class="inline-success-message">Your chosen username is available</span>
+  <span id="usernameFeedback" aria-live="polite" class="success-message">Your chosen username is available</span>
 </form>
 ```
 
@@ -189,7 +189,7 @@ instead.
       <option value="2021">2021</option>
       <option value="2022">2022</option>
     </select>
-    <span id="CommencementYearError" class="inline-error-message" aria-live="polite">Select the year you will commence study at UQ</span>
+    <span id="CommencementYearError" class="error-message" aria-live="polite">Select the year you will commence study at UQ</span>
   </label>
 </form>
 ```
@@ -259,7 +259,7 @@ terms and conditions and opting into communications.
 <form>
   <input id="Confirm" type="checkbox" name="confirm" aria-describedby="ConfirmFeedback" aria-invalid="true" class="input--error" />
   <label for="Confirm" class="label--error">I declare that the information I've provided is correct and true</label>
-  <span id="ConfirmFeedback" aria-live="polite" class="inline-error-message">Make sure your details are correct and then check the declaration statement</span>
+  <span id="ConfirmFeedback" aria-live="polite" class="error-message">Make sure your details are correct and then check the declaration statement</span>
 </form>
 ```
 
@@ -286,7 +286,7 @@ Use a `fieldset` and `legend` to group and label your radio options.
     <label for="Semester1">Semester 1</label><br/>
     <input id="Semester2" type="radio" name="semester" aria-describedby="semesterFeedback" />
     <label for="Semester2">Semester 2</label>
-    <span id="semesterFeedback" aria-live="polite" class="inline-error-message"></span>
+    <span id="semesterFeedback" aria-live="polite" class="error-message"></span>
 
     <!-- Implicit control-label association -->
     <label>
@@ -297,7 +297,7 @@ Use a `fieldset` and `legend` to group and label your radio options.
       <input type="radio" name="semester" aria-describedby="semesterFeedback" />
       <span>Semester 2</span>
     </label>
-    <span id="semesterFeedback" aria-live="polite" class="inline-error-message"></span>
+    <span id="semesterFeedback" aria-live="polite" class="error-message"></span>
 
   </fieldset>
 </form>
@@ -315,7 +315,7 @@ Use a `fieldset` and `legend` to group and label your radio options.
     <label for="Semester2" class="label--error">Semester 1</label><br/>
     <input id="Semester2" type="radio" name="semester" class="input--error" aria-invalid="true" aria-describedby="semesterFeedback" />
     <label for="Semester2" class="label--error">Semester 2</label>
-    <span id="semesterFeedback" aria-live="polite" class="inline-error-message">Please select a semester</span>
+    <span id="semesterFeedback" aria-live="polite" class="error-message">Please select a semester</span>
   </fieldset>
 </form>
 ```
